[tool.poetry]
name = "dbt-athena2"
version = "1.1.2"
description = "Athena adapter for dbt platform"
authors = ["Duc Nguyen"]
packages = [
    { include = "adapters/athena", from = "dbt" },
]

[tool.semantic_release]
version_variable = [
    "dbt/adapters/athena/__version__.py:version",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"